# shipping-ml

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: DEPLOYMENT.md  README.md  ci.yml  deploy.yml  train.yml
examples/: load_csv_data.py  preprocessing_demo.py  train_model.py
notebook/: eda.ipynb  kfp_example.ipynb
registry/: production_baseline.json
scripts/: train_orchestrator.py
src/rental_prediction/: __init__.py  config.py
src/rental_prediction/api/: README.md  __init__.py  main.py  predictor.py  schemas.py
src/rental_prediction/config/: README.md  __init__.py  model_config.py  settings.py
src/rental_prediction/data/: __init__.py  loader.py  schema.py
src/rental_prediction/modelling/: __init__.py  base_model.py  rf.py
src/rental_prediction/models/: __init__.py  base_model.py  lightgbm_model.py  xgboost_model.py
src/rental_prediction/preprocessor/: __init__.py  data_preprocessor.py
src/rental_prediction/preprocessor/handlers/: __init__.py  base_handler.py  col_encoder.py  garden_area_parser.py
src/rental_prediction/preprocessor/transformers/: base_handler.py  col_encoder.py  column_pruner.py  garden_area_parser.py
src/rental_prediction/training/: __init__.py  experiment_tracking.py  hyperparameter_tuning.py  trainer.py
src/rental_prediction/util/: data_schema.py  db_ingestion.py
src/rental_prediction/utils/: __init__.py  model_registry.py
