[project]
name = "rental_prediction"
version = "0.1.0"
description = "An example of end-to-end ml project cycle using a rental prediction dataset"
authors = [
    {name = "hy"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "xgboost (>=2.1.0,<3.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "optuna (>=4.1.0,<5.0.0)",
    "mlflow (>=2.18.0,<3.0.0)",
    "black (>=24.10.0,<25.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "isort (>=5.13.2,<6.0.0)",
    "docformatter (>=1.7.5,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pre-commit (>=4.0.1,<5.0.0)",
    "optuna-dashboard (>=0.17.0,<0.18.0)",
    "google-cloud-bigquery (>=3.27.0,<4.0.0)",
    "google-cloud-bigquery-storage (>=2.27.0,<3.0.0)",
    "db-dtypes (>=1.3.1,<2.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pandera>=0.27.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
